[project]
name = "graph-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.71",
    "botocore[crt]>=1.42.71",
    "langchain-aws>=0.2.0",
    "oxigraph>=0.5.6",
    "pyoxigraph>=0.5.6",
    "pydantic>=2.0.0",
    "rdflib>=7.6.0",
]
